--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "file-system": "^2.2.2",
+    "leaflet": "^1.1.0",
     "mapbox": "^1.0.0-beta7",
     "mapbox-gl": "^0.38.0",
     "method-override": "^2.3.9"
